fix: save alignment

--- a/src/shared/components/SaveDesignButton/SaveDesignButton.css
+++ b/src/shared/components/SaveDesignButton/SaveDesignButton.css
@@ -71,9 +71,9 @@
   backdrop-filter: blur(10px);
   animation: menuAppear 0.5s ease;
   border: 1px solid #6a6a6a;
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: fixed;
+  top: 10px;
+  right: 2vh;
   z-index: 1003;
   padding: 1.5rem;
 }
